# sp_scanner

./: .gitmodules  .metadata  README.md  ffigen.yaml  ios  justfile  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/sp_scanner_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
ios/: sp_scanner.podspec
ios/Classes/: sp_scanner.c
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
lib/: generated_bindings.dart  package.dart  scanner.dart  sp_scanner.dart  sp_scanner_bindings_generated.dart
linux/: CMakeLists.txt
macos/: sp_scanner.podspec
macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh
rust/: Cargo.toml  build.rs  justfile
rust/src/: lib.rs
src/: CMakeLists.txt  sp_scanner.c
